--- a/Depo/LifeBox_Business/Presentation/UserStories/Others/Upload/Selection/GallerySelection/Assets/UploadGalleryAssetPickerCell.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Others/Upload/Selection/GallerySelection/Assets/UploadGalleryAssetPickerCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="UploadGalleryAssetPickerCell">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="UploadGalleryAssetPickerCell" customModule="lifeBox_Business" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -20,19 +20,29 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YXb-MF-OXH">
                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                     </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="m65-Qg-lzO">
+                        <rect key="frame" x="30" y="30" width="16" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="16" id="ACW-aI-VL6"/>
+                            <constraint firstAttribute="width" constant="16" id="Njn-5e-TrC"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstItem="YXb-MF-OXH" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="1tD-oC-KLt"/>
+                <constraint firstAttribute="bottom" secondItem="m65-Qg-lzO" secondAttribute="bottom" constant="4" id="JcD-5s-bCR"/>
+                <constraint firstAttribute="trailing" secondItem="m65-Qg-lzO" secondAttribute="trailing" constant="4" id="PN0-lO-dZo"/>
                 <constraint firstAttribute="trailing" secondItem="YXb-MF-OXH" secondAttribute="trailing" id="SOl-Oi-Ior"/>
                 <constraint firstAttribute="bottom" secondItem="YXb-MF-OXH" secondAttribute="bottom" id="lp1-Hr-3We"/>
                 <constraint firstItem="YXb-MF-OXH" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="s35-I4-QfL"/>
             </constraints>
             <connections>
-                <outlet property="imageView" destination="YXb-MF-OXH" id="4Vc-5h-qWW"/>
+                <outlet property="imageView" destination="YXb-MF-OXH" id="hZh-m4-H4J"/>
+                <outlet property="selectionIcon" destination="m65-Qg-lzO" id="1Uv-wH-rqw"/>
             </connections>
-            <point key="canvasLocation" x="26" y="109"/>
+            <point key="canvasLocation" x="24.637681159420293" y="108.48214285714285"/>
         </collectionViewCell>
     </objects>
 </document>
