--- a/Depo/LifeBox_Business/Presentation/UserStories/Settings/Profile/Cells/ProfileCell.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Settings/Profile/Cells/ProfileCell.xib
@@ -17,22 +17,22 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9RP-29-vza">
-                        <rect key="frame" x="15" y="0.0" width="384" height="141"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="141"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Kut-2N-6rh">
-                                <rect key="frame" x="15" y="15" width="279" height="111"/>
+                                <rect key="frame" x="15" y="15" width="309" height="111"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="5Iz-cj-SA4">
-                                        <rect key="frame" x="0.0" y="0.0" width="279" height="50.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="309" height="50.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sDk-dx-C7X">
-                                                <rect key="frame" x="0.0" y="0.0" width="279" height="22.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="309" height="22.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W2Z-v1-Z7i">
-                                                <rect key="frame" x="0.0" y="28.5" width="279" height="22"/>
+                                                <rect key="frame" x="0.0" y="28.5" width="309" height="22"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -46,16 +46,16 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="caE-Fy-g2l">
-                                        <rect key="frame" x="0.0" y="60.5" width="279" height="50.5"/>
+                                        <rect key="frame" x="0.0" y="60.5" width="309" height="50.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YH5-mD-cgV">
-                                                <rect key="frame" x="0.0" y="0.0" width="279" height="22.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="309" height="22.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uml-FK-KvC">
-                                                <rect key="frame" x="0.0" y="28.5" width="279" height="22"/>
+                                                <rect key="frame" x="0.0" y="28.5" width="309" height="22"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -77,21 +77,21 @@
                                 </constraints>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z0u-0Y-ok6">
-                                <rect key="frame" x="309" y="15" width="60" height="60"/>
+                                <rect key="frame" x="339" y="15" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="88j-re-daG"/>
                                     <constraint firstAttribute="width" constant="60" id="ryj-kK-Qzk"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ekt-Xa-6VN">
-                                <rect key="frame" x="316" y="100" width="46" height="30"/>
+                                <rect key="frame" x="346" y="100" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <action selector="changeAvatarButtonPressed:" destination="GM7-DM-Tfv" eventType="touchUpInside" id="dfo-HS-7w1"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66L-St-I9h">
-                                <rect key="frame" x="309" y="15" width="60" height="60"/>
+                                <rect key="frame" x="339" y="15" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="eXb-0n-tcC"/>
                                     <constraint firstAttribute="width" constant="60" id="ujp-Iv-Q61"/>
@@ -118,8 +118,8 @@
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="9RP-29-vza" secondAttribute="bottom" id="40c-no-XO7"/>
                     <constraint firstItem="9RP-29-vza" firstAttribute="top" secondItem="m69-ZB-y96" secondAttribute="top" id="b46-TQ-eYR"/>
-                    <constraint firstAttribute="trailing" secondItem="9RP-29-vza" secondAttribute="trailing" constant="15" id="fZC-RC-9YC"/>
-                    <constraint firstItem="9RP-29-vza" firstAttribute="leading" secondItem="m69-ZB-y96" secondAttribute="leading" constant="15" id="j9T-2N-ReX"/>
+                    <constraint firstAttribute="trailing" secondItem="9RP-29-vza" secondAttribute="trailing" id="fZC-RC-9YC"/>
+                    <constraint firstItem="9RP-29-vza" firstAttribute="leading" secondItem="m69-ZB-y96" secondAttribute="leading" id="j9T-2N-ReX"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -127,7 +127,9 @@
                 <outlet property="changeAvatarButton" destination="ekt-Xa-6VN" id="1Mc-bf-riU"/>
                 <outlet property="containerView" destination="9RP-29-vza" id="c3R-VO-2dg"/>
                 <outlet property="emailLabel" destination="YH5-mD-cgV" id="rrZ-9v-gSF"/>
+                <outlet property="leftConstraint" destination="j9T-2N-ReX" id="sun-Qg-TI1"/>
                 <outlet property="nameSurnameLabel" destination="sDk-dx-C7X" id="a4d-Qt-mBd"/>
+                <outlet property="rightConstraint" destination="fZC-RC-9YC" id="lTj-Lh-frE"/>
                 <outlet property="userAvatarImageView" destination="z0u-0Y-ok6" id="i8T-hU-NcG"/>
                 <outlet property="userAvatarPlaceholder" destination="66L-St-I9h" id="61B-b0-tZC"/>
                 <outlet property="userEmailLabel" destination="uml-FK-KvC" id="hJO-E8-iYc"/>
