--- a/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/Shared/TopBar/TopBarCustomSegmentedView.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/Shared/TopBar/TopBarCustomSegmentedView.xib
@@ -14,10 +14,6 @@
         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iN0-l3-epB" customClass="TopBarCustomSegmentedView" customModule="lifeBox_Business" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="390" height="40"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YmU-dn-5bk">
-                    <rect key="frame" x="0.0" y="0.0" width="390" height="39"/>
-                    <viewLayoutGuide key="safeArea" id="fg8-wB-Aei"/>
-                </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GtN-5v-NYn">
                     <rect key="frame" x="0.0" y="39" width="390" height="1"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -25,25 +21,35 @@
                         <constraint firstAttribute="height" constant="1" id="Q3m-B4-FZR"/>
                     </constraints>
                 </view>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Hca-7T-Olm">
+                    <rect key="frame" x="0.0" y="0.0" width="390" height="39"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ofk-cN-66n">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="GtN-5v-NYn" firstAttribute="top" secondItem="YmU-dn-5bk" secondAttribute="bottom" id="GZc-Gy-VGv"/>
-                <constraint firstAttribute="trailing" secondItem="YmU-dn-5bk" secondAttribute="trailing" id="HG4-B7-Wzf"/>
+                <constraint firstAttribute="trailing" secondItem="Hca-7T-Olm" secondAttribute="trailing" id="0Nr-74-8rc"/>
+                <constraint firstItem="Hca-7T-Olm" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="OgZ-Ul-1ry"/>
                 <constraint firstItem="GtN-5v-NYn" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Rg4-0A-Kn1"/>
                 <constraint firstAttribute="bottom" secondItem="GtN-5v-NYn" secondAttribute="bottom" id="aTW-st-p6z"/>
                 <constraint firstAttribute="height" constant="40" id="cuj-NL-HL3"/>
-                <constraint firstItem="YmU-dn-5bk" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="q6F-sh-17l"/>
+                <constraint firstItem="Hca-7T-Olm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="cvL-T6-PNk"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="GtN-5v-NYn" secondAttribute="trailing" id="tnB-ys-WXM"/>
-                <constraint firstItem="YmU-dn-5bk" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="v1d-g1-QKq"/>
+                <constraint firstItem="GtN-5v-NYn" firstAttribute="top" secondItem="Hca-7T-Olm" secondAttribute="bottom" id="xGc-qc-6cW"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="collectionView" destination="Hca-7T-Olm" id="DzS-WS-lRK"/>
                 <outlet property="separartorView" destination="GtN-5v-NYn" id="W3v-Gt-1ex"/>
-                <outlet property="stackView" destination="YmU-dn-5bk" id="hau-hh-dOg"/>
             </connections>
-            <point key="canvasLocation" x="49.275362318840585" y="-84.040178571428569"/>
+            <point key="canvasLocation" x="49.275362318840585" y="-84.375"/>
         </view>
     </objects>
     <resources>
