--- a/Depo/LifeBox_Business/Presentation/UserStories/Settings/Profile/Cells/ProfileCell.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Settings/Profile/Cells/ProfileCell.xib
@@ -77,21 +77,14 @@
                                 </constraints>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z0u-0Y-ok6">
-                                <rect key="frame" x="339" y="15" width="60" height="60"/>
+                                <rect key="frame" x="339" y="40.5" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="88j-re-daG"/>
                                     <constraint firstAttribute="width" constant="60" id="ryj-kK-Qzk"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ekt-Xa-6VN">
-                                <rect key="frame" x="346" y="100" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="changeAvatarButtonPressed:" destination="GM7-DM-Tfv" eventType="touchUpInside" id="dfo-HS-7w1"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66L-St-I9h">
-                                <rect key="frame" x="339" y="15" width="60" height="60"/>
+                                <rect key="frame" x="339" y="40.5" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="eXb-0n-tcC"/>
                                     <constraint firstAttribute="width" constant="60" id="ujp-Iv-Q61"/>
@@ -101,22 +94,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="66L-St-I9h" firstAttribute="top" secondItem="9RP-29-vza" secondAttribute="top" constant="15" id="3Cf-SN-fMB"/>
+                            <constraint firstItem="66L-St-I9h" firstAttribute="centerY" secondItem="9RP-29-vza" secondAttribute="centerY" id="DOp-y7-tby"/>
                             <constraint firstItem="Kut-2N-6rh" firstAttribute="top" secondItem="9RP-29-vza" secondAttribute="top" constant="15" id="FmX-GM-mKP"/>
                             <constraint firstItem="Kut-2N-6rh" firstAttribute="leading" secondItem="9RP-29-vza" secondAttribute="leading" constant="15" id="PJa-3b-ZPW"/>
-                            <constraint firstItem="z0u-0Y-ok6" firstAttribute="top" secondItem="9RP-29-vza" secondAttribute="top" constant="15" id="UoN-3n-p9M"/>
+                            <constraint firstItem="z0u-0Y-ok6" firstAttribute="centerY" secondItem="9RP-29-vza" secondAttribute="centerY" id="Ye7-0o-XPA"/>
                             <constraint firstItem="z0u-0Y-ok6" firstAttribute="leading" secondItem="Kut-2N-6rh" secondAttribute="trailing" constant="15" id="YuC-5s-DGs"/>
                             <constraint firstAttribute="trailing" secondItem="66L-St-I9h" secondAttribute="trailing" constant="15" id="bdj-2F-faV"/>
                             <constraint firstAttribute="bottom" secondItem="Kut-2N-6rh" secondAttribute="bottom" constant="15" id="cHq-ev-fpT"/>
-                            <constraint firstItem="ekt-Xa-6VN" firstAttribute="centerX" secondItem="z0u-0Y-ok6" secondAttribute="centerX" id="gG6-EJ-54t"/>
-                            <constraint firstItem="ekt-Xa-6VN" firstAttribute="centerY" secondItem="uml-FK-KvC" secondAttribute="centerY" id="qf8-8J-Bp1"/>
                             <constraint firstAttribute="trailing" secondItem="z0u-0Y-ok6" secondAttribute="trailing" constant="15" id="tCR-bo-8zc"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="ekt-Xa-6VN"/>
-                            </mask>
-                        </variation>
                     </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -129,7 +115,6 @@
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
-                <outlet property="changeAvatarButton" destination="ekt-Xa-6VN" id="1Mc-bf-riU"/>
                 <outlet property="containerView" destination="9RP-29-vza" id="c3R-VO-2dg"/>
                 <outlet property="emailLabel" destination="YH5-mD-cgV" id="rrZ-9v-gSF"/>
                 <outlet property="nameSurnameLabel" destination="sDk-dx-C7X" id="a4d-Qt-mBd"/>
