--- a/Depo/LifeBox_Business/Presentation/UserStories/Settings/Profile/Cells/ProfileCell.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Settings/Profile/Cells/ProfileCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="141" id="GM7-DM-Tfv" customClass="ProfileCell" customModule="lifeBox_Business" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="145" id="GM7-DM-Tfv" customClass="ProfileCell" customModule="lifeBox_Business" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="141"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GM7-DM-Tfv" id="m69-ZB-y96">
@@ -17,22 +17,22 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9RP-29-vza">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="141"/>
+                        <rect key="frame" x="0.0" y="2" width="414" height="137"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Kut-2N-6rh">
-                                <rect key="frame" x="15" y="15" width="309" height="111"/>
+                                <rect key="frame" x="15" y="15" width="309" height="107"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="5Iz-cj-SA4">
-                                        <rect key="frame" x="0.0" y="0.0" width="309" height="50.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="309" height="48.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sDk-dx-C7X">
-                                                <rect key="frame" x="0.0" y="0.0" width="309" height="22.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="309" height="21.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W2Z-v1-Z7i">
-                                                <rect key="frame" x="0.0" y="28.5" width="309" height="22"/>
+                                                <rect key="frame" x="0.0" y="27.5" width="309" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -46,16 +46,16 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="caE-Fy-g2l">
-                                        <rect key="frame" x="0.0" y="60.5" width="309" height="50.5"/>
+                                        <rect key="frame" x="0.0" y="58.5" width="309" height="48.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YH5-mD-cgV">
-                                                <rect key="frame" x="0.0" y="0.0" width="309" height="22.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="309" height="21.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uml-FK-KvC">
-                                                <rect key="frame" x="0.0" y="28.5" width="309" height="22"/>
+                                                <rect key="frame" x="0.0" y="27.5" width="309" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -77,14 +77,14 @@
                                 </constraints>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z0u-0Y-ok6">
-                                <rect key="frame" x="339" y="40.5" width="60" height="60"/>
+                                <rect key="frame" x="339" y="38.5" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="88j-re-daG"/>
                                     <constraint firstAttribute="width" constant="60" id="ryj-kK-Qzk"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66L-St-I9h">
-                                <rect key="frame" x="339" y="40.5" width="60" height="60"/>
+                                <rect key="frame" x="339" y="38.5" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="eXb-0n-tcC"/>
                                     <constraint firstAttribute="width" constant="60" id="ujp-Iv-Q61"/>
@@ -107,8 +107,8 @@
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="9RP-29-vza" secondAttribute="bottom" id="40c-no-XO7"/>
-                    <constraint firstItem="9RP-29-vza" firstAttribute="top" secondItem="m69-ZB-y96" secondAttribute="top" id="b46-TQ-eYR"/>
+                    <constraint firstAttribute="bottom" secondItem="9RP-29-vza" secondAttribute="bottom" constant="2" id="40c-no-XO7"/>
+                    <constraint firstItem="9RP-29-vza" firstAttribute="top" secondItem="m69-ZB-y96" secondAttribute="top" constant="2" id="b46-TQ-eYR"/>
                     <constraint firstAttribute="trailing" secondItem="9RP-29-vza" secondAttribute="trailing" id="fZC-RC-9YC"/>
                     <constraint firstItem="9RP-29-vza" firstAttribute="leading" secondItem="m69-ZB-y96" secondAttribute="leading" id="j9T-2N-ReX"/>
                 </constraints>
