--- a/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/Shared/PrivateShareSharedFilesViewController.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/Shared/PrivateShareSharedFilesViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PrivateShareSharedFilesViewController" customModule="lifeBox_Business" customModuleProvider="target">
             <connections>
+                <outlet property="bottomBarContainerView" destination="17s-8N-dcD" id="gYK-Ic-x82"/>
                 <outlet property="collectionView" destination="zES-4R-AmE" id="txT-kB-JiW"/>
                 <outlet property="view" destination="qtm-6t-baR" id="N6d-IL-QcP"/>
             </connections>
@@ -30,16 +31,24 @@
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="17s-8N-dcD">
+                    <rect key="frame" x="0.0" y="802" width="414" height="94"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="3Ni-6q-moC"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="zES-4R-AmE" secondAttribute="bottom" id="3ds-YA-CGY"/>
                 <constraint firstItem="3Ni-6q-moC" firstAttribute="trailing" secondItem="zES-4R-AmE" secondAttribute="trailing" id="WZ2-XH-Hsq"/>
+                <constraint firstItem="17s-8N-dcD" firstAttribute="top" secondItem="3Ni-6q-moC" secondAttribute="bottom" constant="-60" id="gWf-Ep-uCd"/>
                 <constraint firstItem="zES-4R-AmE" firstAttribute="top" secondItem="qtm-6t-baR" secondAttribute="top" id="igh-I4-Pdh"/>
+                <constraint firstAttribute="bottom" secondItem="17s-8N-dcD" secondAttribute="bottom" id="lMe-en-Ftm"/>
+                <constraint firstItem="17s-8N-dcD" firstAttribute="leading" secondItem="3Ni-6q-moC" secondAttribute="leading" id="sgO-vn-1ay"/>
+                <constraint firstItem="17s-8N-dcD" firstAttribute="trailing" secondItem="3Ni-6q-moC" secondAttribute="trailing" id="tLR-9D-I7J"/>
                 <constraint firstItem="zES-4R-AmE" firstAttribute="leading" secondItem="3Ni-6q-moC" secondAttribute="leading" id="y93-rS-jtL"/>
             </constraints>
-            <point key="canvasLocation" x="-655" y="-231"/>
+            <point key="canvasLocation" x="-655.07246376811599" y="-231.02678571428569"/>
         </view>
     </objects>
     <resources>
