--- a/Depo/LifeBox_Business/Presentation/SubViews/TopBar/GridListTopBarSortingTableCell.xib
+++ b/Depo/LifeBox_Business/Presentation/SubViews/TopBar/GridListTopBarSortingTableCell.xib
@@ -22,7 +22,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sortingWaySelected" translatesAutoresizingMaskIntoConstraints="NO" id="mPD-GX-Yc4">
+                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="selectedCheckmark" translatesAutoresizingMaskIntoConstraints="NO" id="mPD-GX-Yc4">
                         <rect key="frame" x="6" y="11" width="22" height="22"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="22" id="6hZ-ti-ygq"/>
@@ -45,6 +45,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="sortingWaySelected" width="22" height="23"/>
+        <image name="selectedCheckmark" width="22" height="23"/>
     </resources>
 </document>
